traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:3: error: value update is not a member of plm.universe.Direction
  while (!(getDirection()=Direction.NORD)){gauche()}
           ^TraversalByColumn:3: error: not found: value Direction
  while (!(getDirection()=Direction.NORD)){gauche()}
                          ^TraversalByColumn:5: warning: enclosing method getMondeHauteur has result type Unit: return value discarded
  return(nb)
  ^TraversalByColumn:11: error: value update is not a member of plm.universe.Direction
  while (!(getDirection()=Direction.EAST)){gauche()}
           ^TraversalByColumn:11: error: not found: value Direction
  while (!(getDirection()=Direction.EAST)){gauche()}
                          ^TraversalByColumn:13: warning: enclosing method getMondeLargeur has result type Unit: return value discarded
  return(nb)
  ^TraversalByColumn:20: error: not found: value getMondeLargeur
    case (getMondeLargeur(),getMondeHauteur()) => ecritMessage(cpt)
          ^TraversalByColumn:20: error: not found: value getMondeHauteur
    case (getMondeLargeur(),getMondeHauteur()) => ecritMessage(cpt)
                            ^TraversalByColumn:21: error: not found: value getMondeHauteur
    case (_,getMondeHauteur()) => ecritMessage(cpt); cpt= cpt + 1; setPos(getX()+1,0)
            ^